# twitfaver

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  run-local.sh.example
.github/workflows/: main.yml
twitfaver/: logging.py  statistics.py  tweet.py
